Refine User Interface

--- a/sites/default/config/block.block.prds_main_menu.yml
+++ b/sites/default/config/block.block.prds_main_menu.yml
@@ -12,8 +12,8 @@ _core:
   default_config_hash: ChCx7DYNUrPTt5uiRdQAPDKJQMc-_SyAQTrZh8H0o-c
 id: prds_main_menu
 theme: prds
-region: primary_menu
-weight: 0
+region: header
+weight: -6
 provider: null
 plugin: 'system_menu_block:main'
 settings:
