--- a/sites/default/config/node.type.training.yml
+++ b/sites/default/config/node.type.training.yml
@@ -14,4 +14,4 @@ description: 'Any Workshop, Event, or Program '
 help: ''
 new_revision: true
 preview_mode: 1
-display_submitted: true
+display_submitted: false
