--- a/sites/default/config/block.block.prds_search.yml
+++ b/sites/default/config/block.block.prds_search.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   module:
     - search
-    - system
   theme:
     - prds
 _core:
@@ -12,7 +11,7 @@ _core:
 id: prds_search
 theme: prds
 region: header
-weight: -6
+weight: -5
 provider: null
 plugin: search_form_block
 settings:
@@ -21,8 +20,4 @@ settings:
   provider: search
   label_display: '0'
   page_id: node_search
-visibility:
-  request_path:
-    id: request_path
-    pages: '<front>'
-    negate: true
+visibility: {  }
