--- a/sites/default/config/field.field.node.landing_page.field_department_image.yml
+++ b/sites/default/config/field.field.node.landing_page.field_department_image.yml
@@ -13,7 +13,7 @@ entity_type: node
 bundle: landing_page
 label: 'Department Image'
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
