--- a/sites/default/config/node.type.a_z_resource.yml
+++ b/sites/default/config/node.type.a_z_resource.yml
@@ -14,4 +14,4 @@ description: 'Content for the A to Z resource page'
 help: ''
 new_revision: true
 preview_mode: 1
-display_submitted: true
+display_submitted: false
