--- a/sites/default/config/node.type.knowledge_base.yml
+++ b/sites/default/config/node.type.knowledge_base.yml
@@ -14,4 +14,4 @@ description: 'How To, FAQ, or Knowledge Base Item'
 help: ''
 new_revision: true
 preview_mode: 1
-display_submitted: true
+display_submitted: false
