Refine User Interface

--- a/sites/default/config/views.view.events_home.yml
+++ b/sites/default/config/views.view.events_home.yml
@@ -298,7 +298,7 @@ display:
           expose:
             label: ''
           plugin_id: standard
-      title: Training
+      title: 'Past Trainings'
       header: {  }
       footer: {  }
       empty: {  }
