--- a/sites/default/config/user.role.authenticated.yml
+++ b/sites/default/config/user.role.authenticated.yml
@@ -41,6 +41,7 @@ permissions:
   - 'use editorial transition archived_published'
   - 'use editorial transition create_new_draft'
   - 'use editorial transition publish'
+  - 'use search_api_autocomplete for search_content'
   - 'use text format basic_html'
   - 'view any unpublished content'
   - 'view article revisions'
