--- a/sites/default/config/migrate_plus.migration.event_csv_importer.yml
+++ b/sites/default/config/migrate_plus.migration.event_csv_importer.yml
@@ -11,7 +11,7 @@ migration_group: null
 label: 'Import Event CSV feed'
 source:
   plugin: csv
-  path: /home/deploy/researchdata_past_events.csv
+  path: /app/researchdata_past_events.csv
   delimiter: ','
   enclosure: '"'
   header_offset: 0
@@ -105,7 +105,7 @@ process:
     plugin: default_value
     default_value: ''
   field_location: location
-  field_date_and_time:
+  field_training_date_and_time/value:
     -
       plugin: concat
       source:
@@ -116,7 +116,19 @@ process:
       plugin: format_date
       from_format: 'Y-m-d H:i'
       from_timezone: America/New_York
-      to_format: U
+      to_format: 'Y-m-d\TH:i:s'
+  field_training_date_and_time/end_value:
+    -
+      plugin: concat
+      source:
+        - date
+        - end
+      delimiter: ' '
+    -
+      plugin: format_date
+      from_format: 'Y-m-d H:i'
+      from_timezone: America/New_York
+      to_format: 'Y-m-d\TH:i:s'
   status:
     plugin: default_value
     default_value: 1
