--- a/sites/default/config/migrate_plus.migration.event_rss_importer.yml
+++ b/sites/default/config/migrate_plus.migration.event_rss_importer.yml
@@ -12,7 +12,7 @@ label: 'Import Event RSS feed'
 source:
   plugin: url
   data_fetcher_plugin: http
-  urls: 'https://libcal.princeton.edu/rss.php?m=cat&iid=771&cid=12260&cat=49413'
+  urls: 'https://libcal.princeton.edu/rss.php?m=cat&iid=771&cid=12260&cat=47444'
   data_parser_plugin: simple_xml
   item_selector: /rss/channel/item
   fields:
@@ -32,6 +32,10 @@ source:
       name: start
       label: 'Event start time'
       selector: 'libcal:start'
+    -
+      name: end
+      label: 'Event end time'
+      selector: 'libcal:end'
     -
       name: link
       label: 'Origin link'
@@ -55,7 +59,7 @@ process:
     plugin: default_value
     default_value: basic_html
   field_location: location
-  field_date_and_time:
+  field_training_date_and_time/value:
     -
       plugin: concat
       source:
@@ -66,7 +70,19 @@ process:
       plugin: format_date
       from_format: 'Y-m-d H:i:s'
       from_timezone: America/New_York
-      to_format: U
+      to_format: 'Y-m-d\TH:i:s'
+  field_training_date_and_time/end_value:
+    -
+      plugin: concat
+      source:
+        - date
+        - end
+      delimiter: ' '
+    -
+      plugin: format_date
+      from_format: 'Y-m-d H:i:s'
+      from_timezone: America/New_York
+      to_format: 'Y-m-d\TH:i:s'
   status:
     plugin: default_value
     default_value: 1
