--- a/sites/default/config/core.extension.yml
+++ b/sites/default/config/core.extension.yml
@@ -13,6 +13,7 @@ module:
   content_moderation: 0
   contextual: 0
   datetime: 0
+  datetime_range: 0
   dblog: 0
   dynamic_page_cache: 0
   editor: 0
