--- a/sites/default/config/search_api.index.default_index.yml
+++ b/sites/default/config/search_api.index.default_index.yml
@@ -9,7 +9,6 @@ dependencies:
   config:
     - field.storage.node.field_tags
     - search_api.server.default_server
-    - core.entity_view_mode.node.search_index
 _core:
   default_config_hash: GLmLegZGHtMF6annRqgjizJAoiAip-IT-XOsDMCZfog
 id: default_index
@@ -66,8 +65,13 @@ field_settings:
         anonymous: anonymous
       view_mode:
         'entity:node':
-          article: search_index
-          page: search_index
+          a_z_resource: ''
+          article: ''
+          knowledge_base: ''
+          landing_page: ''
+          page: ''
+          service: ''
+          training: ''
   status:
     label: 'Publishing status'
     datasource_id: 'entity:node'
