--- a/sites/default/config/search_api_autocomplete.search.search_content.yml
+++ b/sites/default/config/search_api_autocomplete.search.search_content.yml
@@ -12,13 +12,32 @@ id: search_content
 label: 'Search content'
 index_id: default_index
 suggester_settings:
+  live_results:
+    fields: {  }
+    view_modes:
+      'entity:node':
+        article: ''
+        a_z_resource: ''
+        knowledge_base: ''
+        landing_page: ''
+        page: ''
+        service: ''
+        training: ''
   server:
     fields: {  }
-suggester_weights: {  }
+suggester_weights:
+  live_results: 0
+  server: 0
 suggester_limits: {  }
 search_settings:
   'views:search_content':
     displays:
       default: true
       selected: {  }
-options: {  }
+options:
+  limit: 5
+  min_length: 1
+  show_count: false
+  autosubmit: true
+  submit_button_selector: ':submit'
+  delay: null
