--- a/sites/default/config/views.view.events_home.yml
+++ b/sites/default/config/views.view.events_home.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - node.type.training
   module:
+    - datetime
     - node
     - user
 id: events_home
@@ -63,7 +64,7 @@ display:
           default_field_elements: false
           inline: {  }
           separator: ''
-          hide_empty: false
+          hide_empty: true
       fields:
         title:
           id: title
@@ -154,19 +155,65 @@ display:
           expose:
             operator_limit_selection: false
             operator_list: {  }
-      sorts:
-        field_date_and_time_value:
-          id: field_date_and_time_value
-          table: node__field_date_and_time
-          field: field_date_and_time_value
+        field_training_date_and_time_value:
+          id: field_training_date_and_time_value
+          table: node__field_training_date_and_time
+          field: field_training_date_and_time_value
           relationship: none
           group_type: group
           admin_label: ''
-          order: DESC
+          operator: '<='
+          value:
+            min: ''
+            max: ''
+            value: now
+            type: offset
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
+      sorts:
+        field_training_date_and_time_value:
+          id: field_training_date_and_time_value
+          table: node__field_training_date_and_time
+          field: field_training_date_and_time_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
           exposed: false
           expose:
             label: ''
-          plugin_id: standard
+          granularity: second
+          plugin_id: datetime
       title: 'Past Trainings'
       header: {  }
       footer: {  }
@@ -189,6 +236,119 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
+      sorts:
+        field_training_date_and_time_value:
+          id: field_training_date_and_time_value
+          table: node__field_training_date_and_time
+          field: field_training_date_and_time_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          granularity: hour
+          plugin_id: datetime
+      defaults:
+        sorts: false
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - 'user.node_grants:view'
+        - user.permissions
+      tags: {  }
+  block_2:
+    display_plugin: block
+    id: block_2
+    display_title: 'Upcoming Trainings Block'
+    position: 1
+    display_options:
+      display_extenders: {  }
+      title: 'Upcoming Trainings'
+      defaults:
+        title: false
+        filters: false
+        filter_groups: false
+      display_description: ''
+      filters:
+        status:
+          value: '1'
+          table: node_field_data
+          field: status
+          plugin_id: boolean
+          entity_type: node
+          entity_field: status
+          id: status
+          expose:
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+          group: 1
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          value:
+            training: training
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+          expose:
+            operator_limit_selection: false
+            operator_list: {  }
+        field_training_date_and_time_value:
+          id: field_training_date_and_time_value
+          table: node__field_training_date_and_time
+          field: field_training_date_and_time_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '>='
+          value:
+            min: ''
+            max: ''
+            value: now
+            type: offset
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+      block_hide_empty: true
     cache_metadata:
       max-age: -1
       contexts:
