--- a/sites/default/config/block.block.prds_page_title.yml
+++ b/sites/default/config/block.block.prds_page_title.yml
@@ -2,6 +2,8 @@ uuid: 6def479d-496b-4592-8473-8a7996501b87
 langcode: en
 status: true
 dependencies:
+  module:
+    - system
   theme:
     - prds
 _core:
@@ -17,4 +19,8 @@ settings:
   label: 'Page title'
   provider: core
   label_display: '0'
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: "/research-lifecycle\r\n/research-lifecycle/*"
+    negate: true
