--- a/sites/default/config/core.entity_form_display.node.a_z_resource.default.yml
+++ b/sites/default/config/core.entity_form_display.node.a_z_resource.default.yml
@@ -4,12 +4,14 @@ status: true
 dependencies:
   config:
     - field.field.node.a_z_resource.body
+    - field.field.node.a_z_resource.field_image_logo
     - field.field.node.a_z_resource.field_resource_category
     - field.field.node.a_z_resource.field_resource_link
     - node.type.a_z_resource
   module:
     - content_moderation
     - link
+    - media_library
     - path
     - text
 id: node.a_z_resource.default
@@ -19,7 +21,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 1
+    weight: 2
     settings:
       rows: 9
       summary_rows: 3
@@ -29,10 +31,17 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_image_logo:
+    type: media_library_widget
+    weight: 26
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
+    region: content
   field_resource_category:
     weight: 3
     settings:
@@ -44,7 +53,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_resource_link:
-    weight: 0
+    weight: 1
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -53,13 +62,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 10
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -67,26 +76,26 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 7
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 120
+    weight: 11
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 8
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
