--- a/sites/default/config/core.entity_form_display.node.knowledge_base.default.yml
+++ b/sites/default/config/core.entity_form_display.node.knowledge_base.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.knowledge_base.body
     - field.field.node.knowledge_base.field_category
+    - field.field.node.knowledge_base.layout_builder__layout
     - node.type.knowledge_base
   module:
     - content_moderation
@@ -92,4 +93,5 @@ content:
       match_limit: 10
     region: content
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  layout_builder__layout: true
