--- a/sites/default/config/core.entity_view_display.node.a_z_resource.default.yml
+++ b/sites/default/config/core.entity_view_display.node.a_z_resource.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.a_z_resource.body
+    - field.field.node.a_z_resource.field_image_logo
     - field.field.node.a_z_resource.field_resource_category
     - field.field.node.a_z_resource.field_resource_link
     - node.type.a_z_resource
@@ -14,6 +15,15 @@ targetEntityType: node
 bundle: a_z_resource
 mode: default
 content:
+  field_image_logo:
+    type: entity_reference_entity_view
+    weight: 103
+    label: above
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
+    region: content
   field_resource_category:
     weight: 101
     label: above
@@ -30,3 +40,4 @@ content:
 hidden:
   body: true
   field_resource_link: true
+  search_api_excerpt: true
