--- a/sites/default/config/core.entity_view_display.node.a_z_resource.teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.a_z_resource.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.a_z_resource.body
+    - field.field.node.a_z_resource.field_image_logo
     - field.field.node.a_z_resource.field_resource_category
     - field.field.node.a_z_resource.field_resource_link
     - node.type.a_z_resource
@@ -30,5 +31,7 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_image_logo: true
   field_resource_category: true
   field_resource_link: true
+  search_api_excerpt: true
