--- a/sites/default/config/core.entity_view_display.node.article.rss.yml
+++ b/sites/default/config/core.entity_view_display.node.article.rss.yml
@@ -5,9 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.rss
     - field.field.node.article.body
-    - field.field.node.article.comment
-    - field.field.node.article.field_date
-    - field.field.node.article.field_image
+    - field.field.node.article.field_news_image
     - field.field.node.article.field_tags
     - field.field.node.article.layout_builder__layout
     - node.type.article
@@ -30,8 +28,7 @@ content:
     region: content
 hidden:
   body: true
-  comment: true
-  field_date: true
-  field_image: true
+  field_news_image: true
   field_tags: true
   layout_builder__layout: true
+  search_api_excerpt: true
