--- a/sites/default/config/core.entity_view_display.node.article.search_index.yml
+++ b/sites/default/config/core.entity_view_display.node.article.search_index.yml
@@ -3,17 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_display.comment.comment.default
     - core.entity_view_mode.node.search_index
     - field.field.node.article.body
-    - field.field.node.article.comment
-    - field.field.node.article.field_date
-    - field.field.node.article.field_image
+    - field.field.node.article.field_news_image
     - field.field.node.article.field_tags
     - field.field.node.article.layout_builder__layout
     - node.type.article
   module:
-    - comment
     - text
     - user
 _core:
@@ -27,14 +23,6 @@ content:
     type: text_default
     weight: 0
     settings: {  }
-    third_party_settings: {  }
-    label: hidden
-    region: content
-  comment:
-    type: comment_default
-    weight: 2
-    settings:
-      pager_id: 0
     third_party_settings: {  }
     label: hidden
     region: content
@@ -52,8 +40,7 @@ content:
     label: hidden
     region: content
 hidden:
-  field_date: true
-  field_image: true
+  field_news_image: true
   layout_builder__layout: true
   links: true
   search_api_excerpt: true
