--- a/sites/default/config/core.entity_view_display.node.article.search_result.yml
+++ b/sites/default/config/core.entity_view_display.node.article.search_result.yml
@@ -5,15 +5,11 @@ dependencies:
   config:
     - core.entity_view_mode.node.search_result
     - field.field.node.article.body
-    - field.field.node.article.comment
-    - field.field.node.article.field_date
-    - field.field.node.article.field_image
+    - field.field.node.article.field_news_image
     - field.field.node.article.field_tags
     - field.field.node.article.layout_builder__layout
-    - image.style.thumbnail
     - node.type.article
   module:
-    - image
     - text
     - user
 _core:
@@ -36,23 +32,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
-  field_image:
-    type: image
-    weight: 0
-    settings:
-      image_style: thumbnail
-      image_link: content
-    third_party_settings: {  }
-    label: hidden
-    region: content
   links:
     weight: 2
     settings: {  }
     third_party_settings: {  }
     region: content
 hidden:
-  comment: true
-  field_date: true
+  field_news_image: true
   field_tags: true
   layout_builder__layout: true
   search_api_excerpt: true
