--- a/sites/default/config/core.entity_view_display.node.article.teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.article.teaser.yml
@@ -5,15 +5,11 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.article.body
-    - field.field.node.article.comment
-    - field.field.node.article.field_date
-    - field.field.node.article.field_image
+    - field.field.node.article.field_news_image
     - field.field.node.article.field_tags
     - field.field.node.article.layout_builder__layout
-    - image.style.mobile
     - node.type.article
   module:
-    - image
     - user
 _core:
   default_config_hash: 4NcL2hSQZBpJbYtNuh5jC6kyQTcAc1m5bQpTegEWEso
@@ -21,21 +17,12 @@ id: node.article.teaser
 targetEntityType: node
 bundle: article
 mode: teaser
-content:
-  field_image:
-    type: image
-    weight: 0
-    region: content
-    label: above
-    settings:
-      image_style: mobile
-      image_link: content
-    third_party_settings: {  }
+content: {  }
 hidden:
   body: true
-  comment: true
   content_moderation_control: true
-  field_date: true
+  field_news_image: true
   field_tags: true
   layout_builder__layout: true
   links: true
+  search_api_excerpt: true
