--- a/sites/default/config/core.entity_view_display.node.knowledge_base.default.yml
+++ b/sites/default/config/core.entity_view_display.node.knowledge_base.default.yml
@@ -5,10 +5,90 @@ dependencies:
   config:
     - field.field.node.knowledge_base.body
     - field.field.node.knowledge_base.field_category
+    - field.field.node.knowledge_base.layout_builder__layout
     - node.type.knowledge_base
+    - system.menu.knowledge-base-menu
   module:
+    - layout_builder
+    - system
     - text
     - user
+third_party_settings:
+  layout_builder:
+    allow_custom: true
+    enabled: true
+    sections:
+      -
+        layout_id: layout_twocol_section
+        layout_settings:
+          label: ''
+          column_widths: 25-75
+        components:
+          10a90305-c8eb-478c-86a2-db75a4067d60:
+            uuid: 10a90305-c8eb-478c-86a2-db75a4067d60
+            region: first
+            configuration:
+              id: 'system_menu_block:knowledge-base-menu'
+              label: 'Knowledge Base Menu'
+              provider: system
+              label_display: '0'
+              level: 1
+              depth: 0
+              expand_all_items: false
+              context_mapping: {  }
+            additional: {  }
+            weight: 0
+          cfe0193e-697c-490e-918f-54aebe1ed94d:
+            uuid: cfe0193e-697c-490e-918f-54aebe1ed94d
+            region: second
+            configuration:
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              id: 'field_block:node:knowledge_base:body'
+              formatter:
+                label: hidden
+                type: text_default
+                settings: {  }
+                third_party_settings: {  }
+            additional: {  }
+            weight: 2
+          77f91dbf-0364-4191-9326-102262f5bb3d:
+            uuid: 77f91dbf-0364-4191-9326-102262f5bb3d
+            region: second
+            configuration:
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              id: 'field_block:node:knowledge_base:field_category'
+              formatter:
+                label: above
+                settings:
+                  link: true
+                third_party_settings: {  }
+                type: entity_reference_label
+            additional: {  }
+            weight: 3
+          860c5dc7-843d-49e3-881b-4e1ffdd3f004:
+            uuid: 860c5dc7-843d-49e3-881b-4e1ffdd3f004
+            region: second
+            configuration:
+              id: 'field_block:node:knowledge_base:title'
+              label: Title
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: string
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+                view_mode: view_mode
+            additional: {  }
+            weight: 1
+        third_party_settings: {  }
 id: node.knowledge_base.default
 targetEntityType: node
 bundle: knowledge_base
@@ -34,4 +114,6 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  layout_builder__layout: true
+  search_api_excerpt: true
