--- a/sites/default/config/core.entity_view_display.node.knowledge_base.teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.knowledge_base.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.knowledge_base.body
     - field.field.node.knowledge_base.field_category
+    - field.field.node.knowledge_base.layout_builder__layout
     - node.type.knowledge_base
   module:
     - text
@@ -30,3 +31,5 @@ content:
     region: content
 hidden:
   field_category: true
+  layout_builder__layout: true
+  search_api_excerpt: true
