--- a/sites/default/config/core.entity_view_display.node.landing_page.default.yml
+++ b/sites/default/config/core.entity_view_display.node.landing_page.default.yml
@@ -5,16 +5,14 @@ dependencies:
   config:
     - block_content.type.basic
     - field.field.node.landing_page.body
-    - field.field.node.landing_page.field_department_image
+    - field.field.node.landing_page.field_billboard_image
     - node.type.landing_page
-    - responsive_image.styles.basic_image
     - views.view.events_home
     - views.view.news
     - views.view.resources_home
   module:
     - layout_builder
     - layout_discovery
-    - responsive_image
     - text
     - user
     - views
@@ -47,20 +45,19 @@ third_party_settings:
                 view_mode: view_mode
             additional: {  }
             weight: 0
-          caeded6e-34e7-4dcd-aeae-d97b00cb92c8:
-            uuid: caeded6e-34e7-4dcd-aeae-d97b00cb92c8
+          f6cdb536-1088-456f-86a3-dce3c8fc14b0:
+            uuid: f6cdb536-1088-456f-86a3-dce3c8fc14b0
             region: second
             configuration:
-              id: 'field_block:node:landing_page:field_department_image'
-              label: 'Department Image'
+              id: 'field_block:node:landing_page:field_billboard_image'
+              label: 'Billboard Image'
               provider: layout_builder
               label_display: '0'
               formatter:
                 label: hidden
-                type: responsive_image
+                type: entity_reference_entity_view
                 settings:
-                  responsive_image_style: basic_image
-                  image_link: ''
+                  view_mode: third_width
                 third_party_settings: {  }
               context_mapping:
                 entity: layout_builder.entity
@@ -98,19 +95,6 @@ third_party_settings:
             region: third
             configuration:
               id: 'views_block:resources_home-block_1'
-              label: Resources
-              provider: views
-              label_display: visible
-              views_label: Resources
-              items_per_page: none
-              context_mapping: {  }
-            additional: {  }
-            weight: 1
-          b3b3646a-f2e8-4d28-aec6-6d65de898a79:
-            uuid: b3b3646a-f2e8-4d28-aec6-6d65de898a79
-            region: second
-            configuration:
-              id: 'views_block:events_home-block_1'
               label: ''
               provider: views
               label_display: visible
@@ -119,16 +103,36 @@ third_party_settings:
               context_mapping: {  }
             additional: {  }
             weight: 1
-          0a5fdd71-9e77-46de-be43-70450936121d:
-            uuid: 0a5fdd71-9e77-46de-be43-70450936121d
+          ecc5f35a-68eb-4998-96ad-31ea2448fce5:
+            uuid: ecc5f35a-68eb-4998-96ad-31ea2448fce5
             region: second
             configuration:
-              id: 'views_block:events_home-block_2'
+              id: 'views_block:events_home-block_3'
               label: ''
               provider: views
               label_display: visible
               views_label: ''
               items_per_page: none
+              context_mapping: {  }
+            additional: {  }
+            weight: 2
+        third_party_settings: {  }
+      -
+        layout_id: layout_onecol
+        layout_settings:
+          label: 'The Research Lifecycle'
+        components:
+          3f2b63e4-de07-4f60-817e-94bd6155a73f:
+            uuid: 3f2b63e4-de07-4f60-817e-94bd6155a73f
+            region: content
+            configuration:
+              id: 'inline_block:basic'
+              label: 'The Research Lifecycle'
+              provider: layout_builder
+              label_display: '0'
+              view_mode: full
+              block_revision_id: 8
+              block_serialized: null
               context_mapping: {  }
             additional: {  }
             weight: 0
@@ -145,7 +149,7 @@ third_party_settings:
               id: 'inline_block:basic'
               label: Planning
               provider: layout_builder
-              label_display: visible
+              label_display: '0'
               view_mode: full
               block_revision_id: 1
               block_serialized: null
@@ -159,7 +163,7 @@ third_party_settings:
               id: 'inline_block:basic'
               label: 'Data Acquisition'
               provider: layout_builder
-              label_display: visible
+              label_display: '0'
               view_mode: full
               block_revision_id: 2
               block_serialized: null
@@ -173,7 +177,7 @@ third_party_settings:
               id: 'inline_block:basic'
               label: 'Publishing & Preservation'
               provider: layout_builder
-              label_display: visible
+              label_display: '0'
               view_mode: full
               block_revision_id: 3
               block_serialized: null
@@ -187,7 +191,7 @@ third_party_settings:
               id: 'inline_block:basic'
               label: Analysis
               provider: layout_builder
-              label_display: visible
+              label_display: '0'
               view_mode: full
               block_revision_id: 4
               block_serialized: null
@@ -207,15 +211,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
-  field_department_image:
-    weight: 102
+  field_billboard_image:
+    type: entity_reference_entity_view
+    weight: 103
     label: above
     settings:
-      responsive_image_style: basic_image
-      image_link: ''
+      view_mode: default
+      link: false
     third_party_settings: {  }
-    type: responsive_image
-    region: content
+    region: first
   links:
     weight: 100
     region: content
