--- a/sites/default/config/field.field.node.a_z_resource.field_resource_category.yml
+++ b/sites/default/config/field.field.node.a_z_resource.field_resource_category.yml
@@ -10,7 +10,7 @@ id: node.a_z_resource.field_resource_category
 field_name: field_resource_category
 entity_type: node
 bundle: a_z_resource
-label: 'Resource Category'
+label: Category
 description: ''
 required: true
 translatable: false
