--- a/sites/default/config/field.field.node.knowledge_base.field_category.yml
+++ b/sites/default/config/field.field.node.knowledge_base.field_category.yml
@@ -10,7 +10,7 @@ id: node.knowledge_base.field_category
 field_name: field_category
 entity_type: node
 bundle: knowledge_base
-label: category
+label: Category
 description: ''
 required: false
 translatable: false
