--- a/sites/default/config/field.field.node.training.body.yml
+++ b/sites/default/config/field.field.node.training.body.yml
@@ -11,13 +11,13 @@ id: node.training.body
 field_name: body
 entity_type: node
 bundle: training
-label: Body
+label: Description
 description: ''
 required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  display_summary: true
+  display_summary: false
   required_summary: false
 field_type: text_with_summary
