--- a/sites/default/config/field.storage.node.field_news_image.yml
+++ b/sites/default/config/field.storage.node.field_news_image.yml
@@ -1,16 +1,17 @@
-uuid: eb88753a-4a6a-4465-a845-2649f8e512c2
+uuid: ccc40b68-5545-4c8b-9241-3c21b1e5254e
 langcode: en
 status: true
 dependencies:
   module:
+    - media
     - node
-    - text
-id: node.field_description
-field_name: field_description
+id: node.field_news_image
+field_name: field_news_image
 entity_type: node
-type: text_long
-settings: {  }
-module: text
+type: entity_reference
+settings:
+  target_type: media
+module: core
 locked: false
 cardinality: 1
 translatable: true
