--- a/sites/default/config/views.view.search_content.yml
+++ b/sites/default/config/views.view.search_content.yml
@@ -102,7 +102,7 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
-            placeholder: ''
+            placeholder: 'I want to...'
           is_grouped: false
           group_info:
             label: ''
