--- a/sites/default/config/user.role.authenticated.yml
+++ b/sites/default/config/user.role.authenticated.yml
@@ -9,33 +9,102 @@ label: 'Authenticated user'
 weight: 1
 is_admin: false
 permissions:
-  - 'access comments'
   - 'access content'
   - 'access content overview'
+  - 'access files overview'
+  - 'access in-place editing'
+  - 'access media overview'
+  - 'access media_entity_browser entity browser pages'
+  - 'access media_entity_browser_media_library entity browser pages'
+  - 'access media_entity_browser_modal entity browser pages'
   - 'access shortcuts'
   - 'access site-wide contact form'
+  - 'access taxonomy overview'
   - 'access toolbar'
+  - 'administer menu'
+  - 'create a_z_resource content'
+  - 'create and edit custom blocks'
   - 'create article content'
+  - 'create audio media'
+  - 'create document media'
+  - 'create image media'
+  - 'create knowledge_base content'
+  - 'create landing_page content'
+  - 'create media'
   - 'create page content'
+  - 'create remote_video media'
   - 'create service content'
+  - 'create terms in knowledge_category'
+  - 'create terms in resource_category'
+  - 'create terms in tags'
+  - 'create training content'
+  - 'create video media'
+  - 'delete any a_z_resource content'
   - 'delete any article content'
+  - 'delete any audio media'
+  - 'delete any document media'
+  - 'delete any image media'
+  - 'delete any knowledge_base content'
+  - 'delete any landing_page content'
+  - 'delete any media'
   - 'delete any page content'
+  - 'delete any remote_video media'
   - 'delete any service content'
+  - 'delete any training content'
+  - 'delete any video media'
+  - 'delete media'
+  - 'delete own a_z_resource content'
   - 'delete own article content'
+  - 'delete own audio media'
+  - 'delete own document media'
+  - 'delete own image media'
+  - 'delete own knowledge_base content'
+  - 'delete own landing_page content'
   - 'delete own page content'
+  - 'delete own remote_video media'
   - 'delete own service content'
+  - 'delete own training content'
+  - 'delete own video media'
+  - 'delete terms in knowledge_category'
+  - 'delete terms in resource_category'
+  - 'delete terms in tags'
+  - 'edit any a_z_resource content'
   - 'edit any article content'
+  - 'edit any audio media'
+  - 'edit any document media'
+  - 'edit any image media'
+  - 'edit any knowledge_base content'
+  - 'edit any landing_page content'
   - 'edit any page content'
+  - 'edit any remote_video media'
   - 'edit any service content'
+  - 'edit any training content'
+  - 'edit any video media'
+  - 'edit own a_z_resource content'
   - 'edit own article content'
+  - 'edit own audio media'
+  - 'edit own document media'
+  - 'edit own image media'
+  - 'edit own knowledge_base content'
+  - 'edit own landing_page content'
   - 'edit own page content'
+  - 'edit own remote_video media'
   - 'edit own service content'
-  - 'post comments'
+  - 'edit own training content'
+  - 'edit own video media'
+  - 'edit terms in knowledge_category'
+  - 'edit terms in resource_category'
+  - 'edit terms in tags'
+  - 'revert a_z_resource revisions'
   - 'revert article revisions'
+  - 'revert knowledge_base revisions'
+  - 'revert landing_page revisions'
   - 'revert page revisions'
   - 'revert service revisions'
+  - 'revert training revisions'
   - 'search content'
-  - 'skip comment approval'
+  - 'update any media'
+  - 'update media'
   - 'use editorial transition archive'
   - 'use editorial transition archived_draft'
   - 'use editorial transition archived_published'
@@ -43,11 +112,17 @@ permissions:
   - 'use editorial transition publish'
   - 'use search_api_autocomplete for search_content'
   - 'use text format basic_html'
+  - 'view a_z_resource revisions'
+  - 'view all revisions'
   - 'view any unpublished content'
   - 'view article revisions'
+  - 'view knowledge_base revisions'
+  - 'view landing_page revisions'
   - 'view latest version'
   - 'view media'
   - 'view own unpublished content'
+  - 'view own unpublished media'
   - 'view page revisions'
   - 'view service revisions'
   - 'view the administration theme'
+  - 'view training revisions'
